--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ margin-bottom: 20px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: -450px;
-   background-image: url(/imagenes/fototec.jpg);
+   background-image: url(imagenes/fototec.jpg);
    margin-bottom: 30px;
 }
 
